# KIV-CPP

./: README.md
gaetanth_sp1_drawing/: CMakeLists.txt  vstup.txt
gaetanth_sp1_drawing/Semestralka_1/: Circle.h  FileWriter.h  Instruction.h  Line.h  Rectangle.h  Rotate.h  Scale.h  Translate.h  main.cpp
gaetanth_sp2_mpcalc/: CMakeLists.txt
gaetanth_sp2_mpcalc/Semestralka_2/: MpInt.h  MpTerm.h  main.cpp
